# pixel-wise-canvas

./: LICENSE  README.md
try-app/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
try-app/canvas-engine/: Cargo.toml
try-app/canvas-engine/src/: lib.rs  pool.rs
try-app/projects/pixel-canvas/: README.md  ng-package.json  package.json
try-app/projects/pixel-canvas/src/: public-api.ts
try-app/projects/pixel-canvas/src/lib/: pixel-canvas.component.ts  pixel-canvas.module.ts  pixel-canvas.service.spec.ts  pixel-canvas.service.ts
try-app/src/app/: app.component.html  app.component.spec.ts  app.component.ts  wasm.service.ts
