[package]
name = "canvas-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
itertools = "0.10.5"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2", features = [ "js" ] }
serde = "1.0.156"
rand = "0.8.5"
rayon = "1.7.0"
image = "0.24.5"
wasm-bindgen-futures = "0.4.34"
futures-channel = "0.3.27"
raytracer = { git = 'https://github.com/alexcrichton/raytracer', branch = 'update-deps' }
serde-wasm-bindgen = "0.4.3"
gloo-utils = { version = "0.1.6", features = ["serde"] }

[dependencies.uuid]
version = "1.3.0"
features = [ "v4" ]

[dependencies.web-sys]
version = "0.3.61"
features = [ "CanvasRenderingContext2d", "Document", "Window", "Element", "HtmlCanvasElement", "HtmlImageElement", "ImageData", "Response", "DedicatedWorkerGlobalScope", "MessageEvent", "ErrorEvent", "Event", "Worker", "ImageData", "ImageBitmap", "ImageBitmapOptions", "WheelEvent" ]
